[gd_scene load_steps=11 format=3 uid="uid://4ria8nn5lvy7"]

[ext_resource type="Script" path="res://home/home.gd" id="1_hc5jf"]
[ext_resource type="Texture2D" uid="uid://ce6vb777b8ik4" path="res://public_assets/home.tres" id="2_acntp"]
[ext_resource type="Theme" uid="uid://btm6p112q8a7k" path="res://theme/new_theme.tres" id="3_l8o5g"]
[ext_resource type="PackedScene" uid="uid://dsedj3dtxh20k" path="res://state_bar_day/state_bar_day.tscn" id="3_wp8mh"]
[ext_resource type="Texture2D" uid="uid://den8htc87w3ro" path="res://public_assets/UI/Prinbles_Asset_UNDER (v 1.1) (9_7_2023)/png@2x/Button/Rect/Default@2x.png" id="4_iej8a"]
[ext_resource type="LabelSettings" uid="uid://cirx3pwe1lpe5" path="res://day_map/day_map.tres" id="4_v7710"]

[sub_resource type="SystemFont" id="SystemFont_y6uqa"]
font_names = PackedStringArray("黑体")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ddd63"]
texture = ExtResource("4_iej8a")
region_rect = Rect2(0, 0, 320.587, 161.172)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_376k3"]

[sub_resource type="Theme" id="Theme_w37as"]
Button/font_sizes/font_size = 24
Button/fonts/font = SubResource("SystemFont_y6uqa")
Button/styles/hover = SubResource("StyleBoxTexture_ddd63")
Button/styles/normal = SubResource("StyleBoxTexture_ddd63")
Button/styles/pressed = SubResource("StyleBoxTexture_ddd63")
ItemList/colors/font_color = Color(0.99024, 0.940971, 0.916199, 1)
ItemList/styles/panel = SubResource("StyleBoxTexture_376k3")

[node name="home" type="Node2D"]
script = ExtResource("1_hc5jf")

[node name="background" type="TextureRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("2_acntp")

[node name="play_game" type="Button" parent="."]
offset_left = 479.0
offset_top = 253.0
offset_right = 637.0
offset_bottom = 335.0
mouse_default_cursor_shape = 2
text = "玩游戏"

[node name="sleep" type="Button" parent="."]
offset_left = 873.0
offset_top = 384.0
offset_right = 1024.0
offset_bottom = 465.0
mouse_default_cursor_shape = 2
theme = ExtResource("3_l8o5g")
text = "睡觉"

[node name="exist" type="Button" parent="."]
offset_left = 37.0
offset_top = 388.145
offset_right = 180.0
offset_bottom = 476.145
mouse_default_cursor_shape = 2
theme = SubResource("Theme_w37as")
text = "出门
"

[node name="state_bar_day" parent="." instance=ExtResource("3_wp8mh")]
offset_left = 825.0
offset_top = -13.0
offset_right = 825.0
offset_bottom = -13.0

[node name="Label" type="Label" parent="."]
offset_left = 46.0
offset_top = 74.0
offset_right = 136.0
offset_bottom = 161.0
label_settings = ExtResource("4_v7710")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="play_game" to="." method="_on_play_game_mouse_entered"]
[connection signal="mouse_exited" from="play_game" to="." method="_on_play_game_mouse_exited"]
[connection signal="pressed" from="play_game" to="." method="_on_play_game_pressed"]
[connection signal="mouse_entered" from="sleep" to="." method="_on_sleep_mouse_entered"]
[connection signal="mouse_exited" from="sleep" to="." method="_on_sleep_mouse_exited"]
[connection signal="pressed" from="sleep" to="." method="_on_sleep_pressed"]
[connection signal="mouse_entered" from="exist" to="." method="_on_exist_mouse_entered"]
[connection signal="mouse_exited" from="exist" to="." method="_on_exist_mouse_exited"]
[connection signal="pressed" from="exist" to="." method="_on_exist_pressed"]
